--- a/.github/workflows/HelloWorld.yml
+++ b/.github/workflows/HelloWorld.yml
@@ -14,24 +14,43 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+defaults:
+  run:
+    shell: bash
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
+    #defines the strategy
+    strategy:
+        fail-fast: false
+        matrix:
+          os: [ windows, macos, ubuntu ]
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}-build-${{ matrix.os }}
+      cancel-in-progress: true
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
+          echo Add other actions to build, hello world,
           echo test, and deploy your project.
+  success:
+    runs-on: ubuntu-22.04
+    needs:
+      - build
+    if: >-
+      always() && (
+        contains(join(needs.*.result, ','), 'failure')
+        || !contains(join(needs.*.result, ','), 'cancelled')
+      )
+    steps:
+      - name: Verify that there were no failures
+        run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
