--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,48 @@ Middleware/build/*
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+*.bin
+
+
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Ignore Gradle build output directory
+build
+
+*.log
+*.log*
+.gradle/file-system.probe
+.gradle/7.4/checksums/checksums.lock
+.gradle/7.4/checksums/md5-checksums.bin
+.gradle/7.4/checksums/sha1-checksums.bin
+.gradle/7.4/executionHistory/executionHistory.bin
+.gradle/7.4/executionHistory/executionHistory.lock
+.gradle/7.4/fileHashes/fileHashes.bin
+.gradle/7.4/fileHashes/fileHashes.lock
+.gradle/7.4/fileHashes/resourceHashesCache.bin
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/outputFiles.bin
+build/tmp/compileJava/previous-compilation-data.bin
+build/tmp/compileTestJava/previous-compilation-data.bin
+gradle/wrapper/gradle-wrapper.jar
