--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.4.7' // SLF4J binding for Logback
 
 
+    implementation 'io.vertx:vertx-web-api-contract:4.5.0'
     // https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-core
     implementation 'io.swagger.core.v3:swagger-core:2.2.9'
 
