--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.github.phiz71/vertx-swagger-router
     implementation 'com.github.phiz71:vertx-swagger-router:1.6.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
 }
 
