--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,15 @@ repositories {
 }
 
 dependencies {
+    String vertxVersion = "4.4.0"
     implementation 'junit:junit:4.13.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation 'io.vertx:vertx-web:4.2.0'
-    implementation 'io.vertx:vertx-unit:4.2.0'
-    implementation 'io.vertx:vertx-core:4.2.0'
+    implementation 'io.vertx:vertx-web:' + vertxVersion
+    implementation 'io.vertx:vertx-unit:' + vertxVersion
+    implementation 'io.vertx:vertx-core:' + vertxVersion
+    implementation 'io.vertx:vertx-web-client:' + vertxVersion
+    implementation 'io.vertx:vertx-junit5:'+ vertxVersion
     //implementation 'io.vertx:vertx-mongo-client:4.2.0'
     implementation 'org.mongodb:mongodb-driver-sync:4.5.0'
     implementation 'org.slf4j:slf4j-api:2.0.5' // SLF4J API
