updated build dependences

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,12 @@ repositories {
 
 dependencies {
     String vertxVersion = "4.4.0"
-    implementation 'junit:junit:4.13.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'junit:junit:4.13.1'
+    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    // testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'io.vertx:vertx-web:' + vertxVersion
     implementation 'io.vertx:vertx-unit:' + vertxVersion
+    // testImplementation 'io.vertx:vertx-unit:' + vertxVersion
     implementation 'io.vertx:vertx-core:' + vertxVersion
     implementation 'io.vertx:vertx-web-client:' + vertxVersion
     implementation 'io.vertx:vertx-junit5:'+ vertxVersion
