--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,13 @@ repositories {
 
 dependencies {
     String vertxVersion = "4.4.0"
-    testImplementation 'junit:junit:4.13.1'
-    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    // testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation 'io.vertx:vertx-web:' + vertxVersion
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
+    //implementation 'io.vertx:vertx-web:' + vertxVersion
     implementation 'io.vertx:vertx-unit:' + vertxVersion
-    // testImplementation 'io.vertx:vertx-unit:' + vertxVersion
     implementation 'io.vertx:vertx-core:' + vertxVersion
     implementation 'io.vertx:vertx-web-client:' + vertxVersion
-    implementation 'io.vertx:vertx-junit5:'+ vertxVersion
-    //implementation 'io.vertx:vertx-mongo-client:4.2.0'
+    //implementation 'io.vertx:vertx-junit5:'+ vertxVersion
     implementation 'org.mongodb:mongodb-driver-sync:4.5.0'
     implementation 'org.slf4j:slf4j-api:2.0.5' // SLF4J API
     implementation 'ch.qos.logback:logback-classic:1.4.7' // SLF4J binding for Logback
