--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ repositories {
 dependencies {
     String vertxVersion = "4.4.0"
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
+    // testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     //implementation 'io.vertx:vertx-web:' + vertxVersion
-    implementation 'io.vertx:vertx-unit:' + vertxVersion
+    testImplementation 'io.vertx:vertx-unit:' + vertxVersion
     implementation 'io.vertx:vertx-core:' + vertxVersion
     implementation 'io.vertx:vertx-web-client:' + vertxVersion
     //implementation 'io.vertx:vertx-junit5:'+ vertxVersion
