--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,14 @@ dependencies {
     String vertxVersion = "4.4.0"
     testImplementation 'junit:junit:4.13.2'
     // testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+
     //implementation 'io.vertx:vertx-web:' + vertxVersion
-    testImplementation 'io.vertx:vertx-unit:' + vertxVersion
+    // testImplementation 'io.vertx:vertx-unit:' + vertxVersion
     implementation 'io.vertx:vertx-core:' + vertxVersion
     implementation 'io.vertx:vertx-web-client:' + vertxVersion
-    //implementation 'io.vertx:vertx-junit5:'+ vertxVersion
+    implementation 'io.vertx:vertx-junit5:'+ vertxVersion
     implementation 'org.mongodb:mongodb-driver-sync:4.5.0'
     implementation 'org.slf4j:slf4j-api:2.0.5' // SLF4J API
     implementation 'ch.qos.logback:logback-classic:1.4.7' // SLF4J binding for Logback
