documentation: added the javadoc task

--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+javadoc {
+    destinationDir = file("${buildDir}/docs/javadoc")
+    include 'org/example/**'
+}
