--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,8 @@ name: CI
 on:
   workflow_call:
   push:
-    branches: [ "main" ]
+    #branches: [ "main" ]
+    branches: [ "feature/GHA" ]
 #  pull_request:
 #    branches: [ "main" ]
 
@@ -49,8 +50,78 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Package
-          path: build/libs
+          path: build/*
+      - name: Test
+        run: gradle test
 
+  deploy:
+    #if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+    runs-on: ubuntu-22.04
+    #needs: test
+    permissions: write-all
+    strategy:
+      fail-fast: false
+      matrix:
+        # os: [ windows, macos, ubuntu ]
+        node-version: [18.x] 
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Set project name 
+      run: echo "REPOSITORY_NAME=middleware-maraffa" >> $GITHUB_ENV # unused at the moment
+    - name: Set build version
+      run: echo "BUILD_VERSION=1.0.0" >> $GITHUB_ENV
+    - name: lowercase github.repository
+      run: |
+          echo "IMAGE_NAME=`echo ${{github.repository_owner}}/${{ env.REPOSITORY_NAME }} | tr '[:upper:]' '[:lower:]'`" >>${GITHUB_ENV}
+      if: ${{ github.ref }} == 'refs/heads/main'
+    - name: Extract tag name # Impllcit constraint the tag can be done only from release in main branch
+      run: echo "TAG_NAME=${{ github.event.release.tag_name }}"
+    - name: Set version with latest  
+      run: echo "VERSION=latest" >> $GITHUB_ENV
+      if: ${{ github.ref }} != 'refs/heads/main'
+    - name: Set version with Develop
+      run: echo "VERSION=develop" >> $GITHUB_ENV
+    - name: Use cache 
+      uses: actions/cache@v2
+      id: restore-build
+      with:
+        path: ./*
+        key: ${{ github.sha }}
+    - run: ls 
+    - name: 'Login to GitHub Container Registry'
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{github.actor}}
+        password: ${{secrets.GITHUB_TOKEN}}
+    - name: Build Docker image
+      run: docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  .
+    - name: Push Docker image
+      run: docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }} 
+
+
+  # test:
+  #   name: test
+  #   needs:
+  #   - build
+  #   runs-on: ubuntu-22.04
+  #   #if: contains(github.event.pull_request.labels.*.name, 'STAGING')
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: Package
+  #         path: build/*
+      # - name: Test
+      #   run: gradle test
+      # - name: Use cache
+      #   uses: actions/cache@v2
+      #   id: restore-build
+      #   with:
+      #     path: ./*
+      #     key: ${{ github.sha }}
+
+      
   # success:
   #   runs-on: ubuntu-22.04
   #   needs:
@@ -64,5 +135,24 @@ jobs:
   #     - name: Verify that there were no failures
   #       run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
 
-# run test only on repository 
-# ./gradlew test --tests repository.StatisticMongoTest
+
+      # - name: Init gradle wrapper
+      #   run: gradle wrapper
+      # - name: Change wrapper permissions
+      #   run: chmod +x ./gradlew
+      # - name: Build with Gradle wrapper
+      #   run: ./gradlew build
+
+      # - name: checkout
+      #   uses: actions/checkout@v2
+
+      # - name: Setup JDK 1.8
+      #   uses: actions/setup-java@v2
+      #   with:
+      #     java-version: '8'
+      #     distribution: 'adopt'
+
+      # - name: Grant Permissions to gradlew
+      #   run: chmod +x gradlew
+      # - name: Test
+      #   run: ./gradlew test --tests "*"
