--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,6 +26,17 @@ jobs:
       cancel-in-progress: true
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
+    services:
+      mongodb:
+        image: mongo:latest
+        ports:
+          - 27012:27012
+        options: --name mongodb_container
+      mongo_express:
+        image: mongo-express:latest
+        ports:
+          - 8081:8081
+        options: --name mongo_express_container
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -57,7 +68,7 @@ jobs:
           mongodb-version: 5.0.9
           mongodb-username: ${{ secrets.MONGO_USER }}
           mongodb-pwd: ${{ secrets.MONGO_PASSWORD }}
-      - run: curl http://localhost:27017
+      - run: curl http://localhost:27012
       # - name: Deploy MongoDB contaier
       #   uses: ipdxco/docker-container-action@v1.1.8
       #   with:
