--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,9 +3,9 @@ on:
   workflow_call:
   push:
     #branches: [ "main" ]
-    branches: [ "feature/GHA" ]
-#  pull_request:
-#    branches: [ "main" ]
+    branches: ["feature/GHA"]
+  #  pull_request:
+  #    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,32 +19,34 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-22.04 ]
+        os:
+          [ubuntu-22.04]
           #os: [ windows, macos, ubuntu ]
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}-build-${{ matrix.os }}
       cancel-in-progress: true
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
-    services:
-      mongodb:
-        image: mongo:latest
-        ports:
-          - 27012:27012
-        options: --name mongodb_container
-      mongo_express:
-        image: mongo-express:latest
-        ports:
-          - 8081:8081
-        options: --name mongo_express_container
+    # services:
+    #   mongodb:
+    #     image: mongo:latest
+    #     ports:
+    #       - 27012:27012
+    #     options: --name mongodb_container
+    #   mongo_express:
+    #     image: mongo-express:latest
+    #     ports:
+    #       - 8081:8081
+    #     options: --name mongo_express_container
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          java-version: '19'
-          distribution: 'temurin'
-          cache: 'gradle'
-          cache-dependency-path: | # optional # sub-project/*.gradle*  # sub-project/**/gradle-wrapper.properties
+          java-version: "19"
+          distribution: "temurin"
+          cache: "gradle"
+          cache-dependency-path:
+            | # optional # sub-project/*.gradle*  # sub-project/**/gradle-wrapper.properties
             *.gradle*
             **/gradle-wrapper.properties
       - name: Setup Gradle
@@ -53,8 +55,8 @@ jobs:
       - name: Build Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.1 
-          add-job-summary-as-pr-comment: on-failure 
+          gradle-version: 8.1
+          add-job-summary-as-pr-comment: on-failure
       - run: gradle build --dry-run # Test build configuration
 
       - name: Upload build artifacts
@@ -63,11 +65,15 @@ jobs:
           name: Package
           path: build/*
       - name: Start MongoDB
-        uses: MongoCamp/mongodb-github-action@1.0.0
+        # uses: MongoCamp/mongodb-github-action@1.0.0
+        uses: supercharge/mongodb-github-action@1.10.0
         with:
           mongodb-version: 5.0.9
           mongodb-username: ${{ secrets.MONGO_USER }}
-          mongodb-pwd: ${{ secrets.MONGO_PASSWORD }}
+          mongodb-password: ${{ secrets.MONGO_PASSWORD }}
+          # mongodb-db: 'MaraffaStatisticsDB-test'
+          mongodb-port: 27012
+
       # - run: curl http://localhost:27012
       # - name: Deploy MongoDB contaier
       #   uses: ipdxco/docker-container-action@v1.1.8
@@ -81,7 +87,7 @@ jobs:
         run: gradle test
 
   deploy:
-    #if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-22.04
     needs: build
     permissions: write-all
@@ -89,43 +95,42 @@ jobs:
       fail-fast: false
       matrix:
         # os: [ windows, macos, ubuntu ]
-        node-version: [18.x] 
+        node-version: [18.x]
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Set project name 
-      run: echo "REPOSITORY_NAME=middleware-maraffa" >> $GITHUB_ENV 
-    - name: Set build version
-      run: echo "BUILD_VERSION=1.0.0" >> $GITHUB_ENV
-    - name: lowercase github.repository
-      run: |
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set project name
+        run: echo "REPOSITORY_NAME=middleware-maraffa" >> $GITHUB_ENV
+      - name: Set build version
+        run: echo "BUILD_VERSION=1.0.0" >> $GITHUB_ENV
+      - name: lowercase github.repository
+        run: |
           echo "IMAGE_NAME=`echo ${{github.repository_owner}}/${{ env.REPOSITORY_NAME }} | tr '[:upper:]' '[:lower:]'`" >>${GITHUB_ENV}
-      if: ${{ github.ref }} == 'refs/heads/main'
-    - name: Extract tag name # Impllcit constraint the tag can be done only from release in main branch
-      run: echo "TAG_NAME=${{ github.event.release.tag_name }}"
-    - name: Set version with latest  
-      run: echo "VERSION=latest" >> $GITHUB_ENV
-      if: ${{ github.ref }} != 'refs/heads/main'
-    - name: Set version with Develop
-      run: echo "VERSION=develop" >> $GITHUB_ENV
-    - name: Use cache 
-      uses: actions/cache@v2
-      id: restore-build
-      with:
-        path: ./*
-        key: ${{ github.sha }}
-    - run: ls 
-    - name: 'Login to GitHub Container Registry'
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{github.actor}}
-        password: ${{secrets.GITHUB_TOKEN}}
-    - name: Build Docker image
-      run: docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  .
-    - name: Push Docker image
-      run: docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }} 
-
+        if: ${{ github.ref }} == 'refs/heads/main'
+      - name: Extract tag name # Impllcit constraint the tag can be done only from release in main branch
+        run: echo "TAG_NAME=${{ github.event.release.tag_name }}"
+      - name: Set version with latest
+        run: echo "VERSION=latest" >> $GITHUB_ENV
+        if: ${{ github.ref }} != 'refs/heads/main'
+      - name: Set version with Develop
+        run: echo "VERSION=develop" >> $GITHUB_ENV
+      - name: Use cache
+        uses: actions/cache@v2
+        id: restore-build
+        with:
+          path: ./*
+          key: ${{ github.sha }}
+      - run: ls
+      - name: "Login to GitHub Container Registry"
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+      - name: Build Docker image
+        run: docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  .
+      - name: Push Docker image
+        run: docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}
 
   # test:
   #   name: test
@@ -138,16 +143,15 @@ jobs:
   #       with:
   #         name: Package
   #         path: build/*
-      # - name: Test
-      #   run: gradle test
-      # - name: Use cache
-      #   uses: actions/cache@v2
-      #   id: restore-build
-      #   with:
-      #     path: ./*
-      #     key: ${{ github.sha }}
+  # - name: Test
+  #   run: gradle test
+  # - name: Use cache
+  #   uses: actions/cache@v2
+  #   id: restore-build
+  #   with:
+  #     path: ./*
+  #     key: ${{ github.sha }}
 
-      
   # success:
   #   runs-on: ubuntu-22.04
   #   needs:
@@ -161,24 +165,23 @@ jobs:
   #     - name: Verify that there were no failures
   #       run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
 
+  # - name: Init gradle wrapper
+  #   run: gradle wrapper
+  # - name: Change wrapper permissions
+  #   run: chmod +x ./gradlew
+  # - name: Build with Gradle wrapper
+  #   run: ./gradlew build
 
-      # - name: Init gradle wrapper
-      #   run: gradle wrapper
-      # - name: Change wrapper permissions
-      #   run: chmod +x ./gradlew
-      # - name: Build with Gradle wrapper
-      #   run: ./gradlew build
+  # - name: checkout
+  #   uses: actions/checkout@v2
 
-      # - name: checkout
-      #   uses: actions/checkout@v2
+  # - name: Setup JDK 1.8
+  #   uses: actions/setup-java@v2
+  #   with:
+  #     java-version: '8'
+  #     distribution: 'adopt'
 
-      # - name: Setup JDK 1.8
-      #   uses: actions/setup-java@v2
-      #   with:
-      #     java-version: '8'
-      #     distribution: 'adopt'
-
-      # - name: Grant Permissions to gradlew
-      #   run: chmod +x gradlew
-      # - name: Test
-      #   run: ./gradlew test --tests "*"
+  # - name: Grant Permissions to gradlew
+  #   run: chmod +x gradlew
+  # - name: Test
+  #   run: ./gradlew test --tests "*"
