--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,28 +27,42 @@ jobs:
       cancel-in-progress: true
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
-    # services:
-    #   mongodb:
-    #     image: mongo:latest
-    #     ports:
-    #       - 27012:27012
-    #     options: --name mongodb_container
-    #   mongo_express:
-    #     image: mongo-express:latest
-    #     ports:
-    #       - 8081:8081
-    #     options: --name mongo_express_container
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          java-version: "19"
-          distribution: "temurin"
+          distribution: 'temurin'
+          java-version: '17'
           cache: "gradle"
-          cache-dependency-path:
-            | # optional # sub-project/*.gradle*  # sub-project/**/gradle-wrapper.properties
+          cache-dependency-path: | # optional
             *.gradle*
             **/gradle-wrapper.properties
+      - uses: actions/cache@v3
+        with:
+          path: |
+            *.gradle/*
+            */gradle/wrapper/gradle-wrapper.properties
+          key: gradle-cache   # ~/.gradle/wrapper #~/.gradle/caches
+          #key: ${{ runner.os }}-gradle- #${{ hashFiles('**.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            gradle-cache
+          # restore-keys: |
+          #   ${{ runner.os }}-gradle-
+          
+    # steps:
+    #   - uses: actions/checkout@v4
+    #   - uses: actions/setup-java@v4
+    #     id: setup-java
+    #     with:
+    #       java-version: "19"
+    #       distribution: "temurin"
+    #       cache: "gradle"
+    #       cache-dependency-path:
+    #         | # optional # sub-project/*.gradle*  # sub-project/**/gradle-wrapper.properties
+    #         *.gradle*
+    #         **/gradle-wrapper.properties
+
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
@@ -58,31 +72,46 @@ jobs:
           gradle-version: 8.1
           add-job-summary-as-pr-comment: on-failure
       - run: gradle build --dry-run # Test build configuration
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: Package
-          path: build/*
-      - name: Start MongoDB
-        # uses: MongoCamp/mongodb-github-action@1.0.0
-        uses: supercharge/mongodb-github-action@1.10.0
-        with:
-          mongodb-version: 5.0.9
-          mongodb-username: ${{ secrets.MONGO_USER }}
-          mongodb-password: ${{ secrets.MONGO_PASSWORD }}
-          # mongodb-db: 'MaraffaStatisticsDB-test'
-          mongodb-port: 27012
-
-      # - run: curl http://localhost:27012
-      # - name: Deploy MongoDB contaier
-      #   uses: ipdxco/docker-container-action@v1.1.8
+      # - name: Upload build artifacts
+      #   uses: actions/upload-artifact@v4
       #   with:
-      #     mongodb-version: 6.0
-      #     mongodb-replica-set: mongodb_container
-      #     mongodb-username: ${{ secrets.MONGO_USER }}
-      #     mongodb-password: ${{ secrets.MONGO_PASSWORD }}
-      #     mongodb-port: 27012
+      #     name: Package
+      #     path: build/*
+      
+  test:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          [ubuntu-22.04]
+          #os: [ windows, macos, ubuntu ]
+    needs: build
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}-build-${{ matrix.os }}
+      cancel-in-progress: true
+    # The type of runner that the job will run on
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Restore Gradle cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            *.gradle/*
+            */gradle/wrapper/gradle-wrapper.properties
+          key: gradle-cache
+          restore-keys: gradle-cache
+          # key: ${{ runner.os }}-gradle- #${{ steps.cache.outputs.hash }}
+          # restore-keys: |
+          #   ${{ runner.os }}-gradle-
+      # - name: Run setup-java with the cache for gradle
+      #   uses: ./
+      #   id: setup-java
+      #   with:
+      #     distribution: 'temurin'
+      #     java-version: '17'
+      #     cache: gradle
       - name: Test
         run: gradle test
 
