--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,34 +35,9 @@ jobs:
           java-version: '17'
           cache: "gradle"
           cache-dependency-path: | # optional
+            gradle/*
             *.gradle*
             **/gradle-wrapper.properties
-      - uses: actions/cache@v3
-        with:
-          path: |
-            *.gradle/*
-            */gradle/wrapper/gradle-wrapper.properties
-          key: gradle-cache   # ~/.gradle/wrapper #~/.gradle/caches
-          #key: ${{ runner.os }}-gradle- #${{ hashFiles('**.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            gradle-cache
-          # restore-keys: |
-          #   ${{ runner.os }}-gradle-
-          
-    # steps:
-    #   - uses: actions/checkout@v4
-    #   - uses: actions/setup-java@v4
-    #     id: setup-java
-    #     with:
-    #       java-version: "19"
-    #       distribution: "temurin"
-    #       cache: "gradle"
-    #       cache-dependency-path:
-    #         | # optional # sub-project/*.gradle*  # sub-project/**/gradle-wrapper.properties
-    #         *.gradle*
-    #         **/gradle-wrapper.properties
-
-
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
@@ -94,41 +69,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # - name: Restore Gradle cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       *.gradle/*
-      #       */gradle/wrapper/gradle-wrapper.properties
-      #     key: gradle-cache
-      #     restore-keys: gradle-cache
-          # key: ${{ runner.os }}-gradle- #${{ steps.cache.outputs.hash }}
-          # restore-keys: |
-          #   ${{ runner.os }}-gradle-
-      # - name: Run setup-java with the cache for gradle
-      #   uses: ./
-      #   id: setup-java
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '17'
-      #     cache: gradle
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: "gradle"
-          cache-dependency-path: | # optional
-            *.gradle*
-            **/gradle-wrapper.properties
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: 8.1
-          add-job-summary-as-pr-comment: on-failure
-      - name: cacca
-        run: ls 
       - name: Test
-        run: gradle test
+        run: ./gradlew test
 
   deploy:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
