--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -67,6 +67,14 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: 5.0.9
+          mongodb-username: ${{ secrets.MONGO_USER }}
+          mongodb-password: ${{ secrets.MONGO_PASSWORD }}
+          # mongodb-db: 'MaraffaStatisticsDB-test'
+          mongodb-port: 27012
       - name: Checkout
         uses: actions/checkout@v4
       - uses: actions/setup-java@v4
