--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,11 +1,11 @@
 name: CI
 on:
   workflow_call:
-  push:
-    #branches: [ "main" ]
-    branches: ["feature/GHA"]
-  #  pull_request:
-  #    branches: [ "main" ]
+  release:
+    types: [published]
+  pull_request:
+    branches: ["develop"]
+    types: [closed]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -15,7 +15,7 @@ defaults:
     shell: bash
 
 jobs:
-  build: #A job called "build"
+  build:
     strategy:
       fail-fast: false
       matrix:
@@ -31,8 +31,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: "temurin"
+          java-version: "17"
           cache: "gradle"
           cache-dependency-path: | # optional
             gradle/*
@@ -47,12 +47,7 @@ jobs:
           gradle-version: 8.1
           add-job-summary-as-pr-comment: on-failure
       - run: gradle build --dry-run # Test build configuration
-      # - name: Upload build artifacts
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: Package
-      #     path: build/*
-      
+
   test:
     strategy:
       fail-fast: false
@@ -79,16 +74,15 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: "temurin"
+          java-version: "17"
           cache: "gradle"
       - name: Test
         run: ./gradlew test
 
   deploy:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-22.04
-    needs: build
+    needs: test
     permissions: write-all
     strategy:
       fail-fast: false
@@ -98,38 +92,96 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.CHANGELOG }}
       - name: Set project name
         run: echo "REPOSITORY_NAME=middleware-maraffa" >> $GITHUB_ENV
-      - name: Set build version
-        run: echo "BUILD_VERSION=1.0.0" >> $GITHUB_ENV
       - name: lowercase github.repository
         run: |
-          echo "IMAGE_NAME=`echo ${{github.repository_owner}}/${{ env.REPOSITORY_NAME }} | tr '[:upper:]' '[:lower:]'`" >>${GITHUB_ENV}
-        if: ${{ github.ref }} == 'refs/heads/main'
-      - name: Extract tag name # Impllcit constraint the tag can be done only from release in main branch
-        run: echo "TAG_NAME=${{ github.event.release.tag_name }}"
-      - name: Set version with latest
-        run: echo "VERSION=latest" >> $GITHUB_ENV
-        if: ${{ github.ref }} != 'refs/heads/main'
-      - name: Set version with Develop
-        run: echo "VERSION=develop" >> $GITHUB_ENV
+          echo "IMAGE_NAME=`echo ${{github.repository_owner}}/${{ env.REPOSITORY_NAME }} | tr '[:upper:]' '[:lower:]'`" >> ${GITHUB_ENV}
+      - name: Extract tag name
+        run: echo "TAG_NAME=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+      - name: Set version
+        run: |
+          if [ "${{ github.ref }}" == 'refs/heads/develop' ]; then
+            echo "VERSION=stage" >> ${GITHUB_ENV}
+          else 
+            echo "VERSION=latest" >> ${GITHUB_ENV}
+          fi
       - name: Use cache
         uses: actions/cache@v2
         id: restore-build
         with:
           path: ./*
           key: ${{ github.sha }}
-      - run: ls
+      - name: check tag
+        run: echo ${{ github.event.release.tag_name }}
+      - name: check ENV
+        run: echo $GITHUB_ENV
       - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
+          password: ${{ secrets.CHANGELOG }}
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  .
+        run: echo "docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  ."
       - name: Push Docker image
-        run: docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}
+        run: echo "docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }} "
+
+      ##TODO check this
+      - name: Build Docker image with tag
+        run: |
+          if [ "${{ github.event.release.tag_name }}" != '' ]; then
+            echo "docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.TAG_NAME }}  ."
+            echo "docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.TAG_NAME }}"
+          fi
+
+  # deploy:
+  #   if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+  #   runs-on: ubuntu-22.04
+  #   needs: build
+  #   permissions: write-all
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       # os: [ windows, macos, ubuntu ]
+  #       node-version: [18.x]
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Set project name
+  #       run: echo "REPOSITORY_NAME=middleware-maraffa" >> $GITHUB_ENV
+  #     - name: Set build version
+  #       run: echo "BUILD_VERSION=1.0.0" >> $GITHUB_ENV
+  #     - name: lowercase github.repository
+  #       run: |
+  #         echo "IMAGE_NAME=`echo ${{github.repository_owner}}/${{ env.REPOSITORY_NAME }} | tr '[:upper:]' '[:lower:]'`" >>${GITHUB_ENV}
+  #       if: ${{ github.ref }} == 'refs/heads/main'
+  #     - name: Extract tag name # Impllcit constraint the tag can be done only from release in main branch
+  #       run: echo "TAG_NAME=${{ github.event.release.tag_name }}"
+  #     - name: Set version with latest
+  #       run: echo "VERSION=latest" >> $GITHUB_ENV
+  #       if: ${{ github.ref }} != 'refs/heads/main'
+  #     - name: Set version with Develop
+  #       run: echo "VERSION=develop" >> $GITHUB_ENV
+  #     - name: Use cache
+  #       uses: actions/cache@v2
+  #       id: restore-build
+  #       with:
+  #         path: ./*
+  #         key: ${{ github.sha }}
+  #     - run: ls
+  #     - name: "Login to GitHub Container Registry"
+  #       uses: docker/login-action@v1
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{github.actor}}
+  #         password: ${{secrets.GITHUB_TOKEN}}
+  #     - name: Build Docker image
+  #       run: docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  .
+  #     - name: Push Docker image
+  #       run: docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}
 
   # test:
   #   name: test
