--- a/app/env.example
+++ b/app/env.example
@@ -12,3 +12,10 @@ USER_PORT=3001
 
 FRONTEND_HOST=localhost #
 FRONTEND_PORT=4200 #
+
+
+MONGO_USER=your_mongo_user
+MONGO_PASSWORD=your_mongo_password
+MONGO_HOST=127.0.0.1
+MONGO_PORT=27012
+MONGO_DATABASE=MaraffaStatisticsDB-test
