feat: some javadoc

--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -2,13 +2,13 @@ name: Deploy Javadoc
 
 on:
   push:
-    branches: [ main, 'develop']
+    branches: [main, "develop", "style-doc"]
 
 jobs:
   publish:
     runs-on: ubuntu-22.04
     permissions:
-      contents: write  # if you have a protection rule on your repository, you'll need to give write permission to the workflow.
+      contents: write # if you have a protection rule on your repository, you'll need to give write permission to the workflow.
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
@@ -19,5 +19,5 @@ jobs:
           javadoc-source-folder: app/build/docs/javadoc
           javadoc-branch: javadoc
           java-version: 20
-          target-folder: javadoc 
+          target-folder: javadoc
           project: gradle
